<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Find Address</string>

    <!--
    *  Copyright (c) 2021 Kaua Vitorio
    *  Official repository https://github.com/Kauavitorio/AddressLockup
    *  Responsible developer: https://github.com/Kauavitorio
    -->

    <!--Error-->
    <string name="alerterror">There was an error, please check the reported zip code. If the error persists, contact the developer.</string>

    <!--Result-->
    <string name="address">"Address: "</string>
    <string name="complement">"Complement: "</string>
    <string name="district">"District: "</string>
    <string name="localidade">Locality:</string>
    <string name="state">State:</string>
    <string name="ibge">IBGE:</string>
    <string name="gia">GIA :</string>
    <string name="ddd">DDD:</string>
    <string name="siafi">SIAFI:</string>
    <string name="complementNotSpecified">Complement: * Not specified *</string>

    <!--Buttons-->
    <string name="newsearch">New search</string>
    <string name="goback">Go Back</string>

    <!--Tools-->
    <string name="tentarnovamente">Try again</string>
    <string name="carregando" tools:ignore="TypographyEllipsis">Loading...</string>
    <string name="findforaddress">Search By Address</string>
    <string name="findforpostalcode">Search by zip code</string>
    <string name="insertpostalcodehere">Enter zip code here</string>
    <string name="aguardando_cep">Waiting for zip code</string>
    <string name="search">Search</string>
    <string name="result_of">These are the results of:</string>
    <string name="aguardando_end">Waiting for address</string>
    <string name="insertstatehere">Enter the state here</string>
    <string name="insertcityhere">Enter the city here</string>
    <string name="insertstreethere">Enter the street here</string>
    <string name="exsp" translatable="false">Ex. SP</string>
    <string name="exsaopaulo" translatable="false">Ex. São Paulo</string>
    <string name="exsaodomingos" translatable="false">Ex. Rua São Domingos</string>
    <string name="indevelopment">In development</string>
    <string name="viewinmap">View in map</string>
    <string name="title_activity_maps" translatable="false">Map</string>
    <string name="viewmap">View Map</string>
    <string name="more">More</string>
</resources>

    <!--
        *  Copyright (c) 2021 Kaua Vitorio
        *  Official repository https://github.com/Kauavitorio/AddressLockup
        *  Responsible developer: https://github.com/Kauavitorio
        -->