<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:padding="5dp"
    tools:context=".Find_with_postal_code">

    <!--Base Search-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/baseSearch"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/txt_aguardando_cep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/aguardando_cep"
            android:textColor="#fff"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--EditText for insert Postal Code-->
        <EditText
            android:id="@+id/edittext_CEP"
            android:layout_width="255dp"
            android:layout_height="40dp"
            android:layout_marginTop="5pt"
            android:background="@drawable/molduraedittexte"
            android:hint="@string/insertpostalcodehere"
            android:importantForAutofill="no"
            android:inputType="textPostalAddress"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textSize="17sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_aguardando_cep" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardBtnSearch"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittext_CEP">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="195dp"
                    android:layout_height="45dp"
                    app:cardBackgroundColor="#000"
                    app:cardCornerRadius="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" >

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/search"
                            android:textColor="#fff"
                            android:textSize="25sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--Base Result-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/baseResult"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="97dp"
        tools:layout_editor_absoluteY="16dp">

        <TextView
            android:id="@+id/txt_resultOf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/result_of"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_address_cep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="#fff"
            android:textSize="22sp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_resultOf" />

        <TextView
            android:id="@+id/txt_complement_cep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complement"
            android:textColor="#fff"
            android:textSize="22sp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_address_cep" />

        <TextView
            android:id="@+id/txt_district_cep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/district"
            android:textColor="#fff"
            android:textSize="22sp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_complement_cep" />


        <TextView
            android:id="@+id/txt_localidade_cep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/localidade"
            android:textColor="#fff"
            android:textSize="22sp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_district_cep" />

        <TextView
            android:id="@+id/txt_state_cep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state"
            android:textColor="#fff"
            android:textSize="22sp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_localidade_cep" />

        <TextView
            android:id="@+id/txt_ibge_cep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ibge"
            android:textColor="#fff"
            android:textSize="22sp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_state_cep" />

        <TextView
            android:id="@+id/txt_gia_cep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gia"
            android:textColor="#fff"
            android:textSize="22sp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_ibge_cep" />

        <TextView
            android:id="@+id/txt_ddd_cep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ddd"
            android:textColor="#fff"
            android:textSize="22sp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_gia_cep" />

        <TextView
            android:id="@+id/txt_siafi_cep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/siafi"
            android:textColor="#fff"
            android:textSize="22sp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_ddd_cep" />

        <!--CardViewBtn New Search-->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardBtnNewSearch"
            android:layout_width="160dp"
            android:layout_height="50dp"
            app:cardCornerRadius="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_siafi_cep">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="155dp"
                    android:layout_height="45dp"
                    app:cardBackgroundColor="#000"
                    app:cardCornerRadius="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/newsearch"
                            android:textColor="#fff"
                            android:textSize="21sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <!--CardViewBtn Go Back-->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardBtnGoBack"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_siafi_cep">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="155dp"
                    android:layout_height="45dp"
                    app:cardBackgroundColor="#000"
                    app:cardCornerRadius="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/goback"
                            android:textColor="#fff"
                            android:textSize="24sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>