<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context=".MainActivity">

    <!--ImageView GitHub-->
    <ImageView
        android:id="@+id/ImgGitHub"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/github"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <!--CardView Find for address-->
    <androidx.cardview.widget.CardView
        android:id="@+id/BtnFindForaddress"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:src="@drawable/cardbg"
                android:layout_height="match_parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/findforaddress"
                android:textAlignment="center"
                android:textColor="#D8FFFFFF"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textSize="15pt"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <!--CardView Find for zip code-->
    <androidx.cardview.widget.CardView
        android:id="@+id/BtnFindForPostalCode"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/cardbg"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/findforpostalcode"
                android:textAlignment="center"
                android:textColor="#D8FFFFFF"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textSize="15pt"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <!--CardView More-->
    <androidx.cardview.widget.CardView
        android:id="@+id/BtnMore"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnFindForaddress">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/cardbg"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/more"
                android:textAlignment="center"
                android:textColor="#D8FFFFFF"
                android:textSize="15pt"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <!--CardView View Map-->
    <androidx.cardview.widget.CardView
        android:id="@+id/BtnFindViewMap"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnFindForPostalCode">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/cardbg"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/viewmap"
                android:textAlignment="center"
                android:textColor="#D8FFFFFF"
                android:textSize="16pt"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>